--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -451,7 +451,7 @@
                                     class="left col-4 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
                                     <img class="col-10 px-0 pt-3" src="./img/face.svg" alt="">
                                 </div>
-                                <div class="right bc-white br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
+                                <div class="right bc-gray br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
                                     <span class="c-black helvetica-75 f-14 ">
                                         ციფრული პროექტების მართვა
                                     </span>
@@ -477,7 +477,7 @@
                                     class="left col-4 d-flex align-items-end justify-content-end p-0 bc-light-blue br-tl br-bl">
                                     <img class="col-10 px-0 pt-3" src="./img/face.svg" alt="">
                                 </div>
-                                <div class="right bc-white br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
+                                <div class="right bc-gray br-tr br-br col-8 pr-0 d-flex flex-column pt-1">
                                     <span class="c-black helvetica-75 f-14 ">
                                         ციფრული პროექტების მართვა
                                     </span>
