--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -15,28 +15,82 @@
     <!-- <link href="path/to/select2.min.css" rel="stylesheet" /> -->
 </head>
 
-<body>
+<body id="body">
+    <div class="burger-menu justify-content-center pt-5" id="burger-menu">
+        <nav class="w-100 col-md-6 col-10 col-sm-8 mx-auto">
+            <ul class="d-flex flex-column h-100 w-100">
+                <li class="h-100 d-flex  w-100 hover-bc-border transition pointer py-2 justify-content-center">
+                    <img src="./img/nak.svg" alt="">
+                    <a class="c-header f-16 firago ml-1" href="">ნაკრები</a>
+                </li>
+                <li class="h-100 d-flex  w-100 hover-bc-border transition pointer py-2 justify-content-center">
+                    <img src="./img/Image 55.svg" alt="">
+                    <a class="c-header f-16 firago ml-1" href="">ფეხბურთის ფედერაცია</a>
+                </li>
+                <li class="h-100 d-flex  w-100 hover-bc-border transition pointer py-2 justify-content-center">
+                    <img src="./img/Image 54.svg" alt="">
+                    <a class="c-header f-16 firago ml-1" href="">ეროვნული ლიგა</a>
+                </li>
+                <li class="h-100 d-flex  w-100 hover-bc-border transition pointer py-2 justify-content-center">
+                    <img src="./img/Image 54.svg" alt="">
+                    <a class="c-header f-16 firago ml-1" href="">ფეხბურთის ფედერაცია</a>
+                </li>
+                <li class="h-100 d-flex  w-100 hover-bc-border transition pointer py-2 justify-content-center">
+                    <img src="./img/Image 53.svg" alt="">
+                    <a class="c-header f-16 firago ml-1" href="">საქართველოს თასი</a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="header-nav d-flex col-md-6 col-10 col-sm-8 mx-auto mt-4">
+            <ul class="d-flex flex-column w-100 ">
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">კაცთა ეროვნული</a>
+                </li>
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">ქალთა ეროვნული</a>
+                </li>
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">21-წლამდელები</a>
+                </li>
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">ასაკობრივები</a>
+                </li>
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">ფუტსალი</a>
+                </li>
+                <li class=" py-2 d-flex justify-content-center hover-bc-border transition">
+                    <a class="c-header f-18  firagor" href="">ფანშოპი</a>
+                </li>
+            </ul>
+        </nav>
+
+    </div>
     <header class="header">
         <div class="up-header d-lg-flex d-none justify-content-center">
             <nav class="w-100">
                 <ul class="d-flex align-items-center justify-content-between h-100 w-100">
-                    <li class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
+                    <li
+                        class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
                         <img src="./img/nak.svg" alt="">
                         <a class="c-header f-12 firago text-center ml-1" href="">ნაკრები</a>
                     </li>
-                    <li class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
+                    <li
+                        class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
                         <img src="./img/Image 55.svg" alt="">
                         <a class="c-header f-12 firago text-center ml-1" href="">ფეხბურთის ფედერაცია</a>
                     </li>
-                    <li class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
+                    <li
+                        class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
                         <img src="./img/Image 54.svg" alt="">
                         <a class="c-header f-12 firago text-center ml-1" href="">ეროვნული ლიგა</a>
                     </li>
-                    <li class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
+                    <li
+                        class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
                         <img src="./img/Image 54.svg" alt="">
                         <a class="c-header f-12 firago text-center ml-1" href="">ფეხბურთის ფედერაცია</a>
                     </li>
-                    <li class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
+                    <li
+                        class="h-100 d-flex align-items-center w-100 text-center hover-bc-border transition pointer justify-content-center">
                         <img src="./img/Image 53.svg" alt="">
                         <a class="c-header f-12 firago text-center ml-1" href="">საქართველოს თასი</a>
                     </li>
@@ -44,11 +98,13 @@
             </nav>
         </div>
         <div class="down-header pt-lg-3 d-flex align-items-center justify-content-between center">
-            <div class="left__side d-flex d-lg-none">
-                <div class="burger">
-                    sdsd
+            <div class="left__side d-none pointer">
+                <div class="burger-trigger d-flex justify-content-between flex-column" id="burger">
+                    <div class="rows row-1"></div>
+                    <div class="rows row-2"></div>
+                    <div class="rows row-3"></div>
                 </div>
-                <div class="btn-group d-none d-md-flex d-lg-none" >
+                <div class="btn-group d-none second-lang">
                     <a class="ml-3 dropdown-toggle pointer c-header" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         ქარ
@@ -63,32 +119,86 @@
             <a href="index.html" class="logo">
                 <img src="./img/Logo.svg" alt="">
             </a>
-            <nav class="header-nav w-100 mr-4 ml-5 d-none d-lg-flex">
+            <nav class="header-nav w-100 mr-4 ml-5  d-flex">
                 <ul class="d-flex align-items-center justify-content-between w-100 ">
-                    <li>
-                        <a class="c-header f-14 firagor" href="">კაცთა ეროვნული</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">კაცთა ეროვნული</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li>
-                        <a class="c-header f-14 firagor" href="">ქალთა ეროვნული</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">ქალთა ეროვნული</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li>
-                        <a class="c-header f-14 firagor" href="">21-წლამდელები</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">21-წლამდელები</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li>
-                        <a class="c-header f-14 firagor" href="">ასაკობრივები</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">ასაკობრივები</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li>
-                        <a class="c-header f-14 firagor" href="">ფუტსალი</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">ფუტსალი</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li>
-                        <a class="c-header f-14 firagor" href="">ფანშოპი</a>
+                    <li class="header-li">
+                        <a class="c-header f-14 firagor py-2" href="">ფანშოპი</a>
+                        <div class="header__drop pb-3 ">
+                            <ul class="header-block pb-1 pt-3">
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">მთავარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">შედეგები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">კალენდარი</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ახალი ამბები</li>
+                                <li class="pointer py-2 drop-lists pr-2 mb-3">ფოტო და ვიდეო</li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </nav>
             <div class="right__side d-flex flex-nowrap align-items-center">
                 <a class="mr-lg-0 mr-3 live firagor f-14" class="" href="">LIVE</a>
                 <button class="button d-none d-md-block ml-lg-4 ml-3">ბილეთები</button>
-                <div class="btn-group  d-none d-lg-flex" >
+                <div class="btn-group  first-lang d-flex">
                     <a class="ml-3 dropdown-toggle pointer c-header" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         ქარ
@@ -192,6 +302,8 @@
                     </div>
                 </div>
                 <span class="scroll__overlay bc-dark-gray home d-lg-none"></span>
+                <img class="banner-rows d-lg-none left-10 pointer" src="./img/row-left.svg" alt="">
+                <img class="banner-rows d-lg-none right-10 pointer" src="./img/row-right.svg" alt="">
             </div>
         </div>
         <div class="d-flex d-md-none center w-100">
@@ -203,7 +315,8 @@
                     <li data-target="#carouselExampleCaptions_2" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner w-100">
-                    <div class="carousel-item position-relative linear-bc w-100 active" style="background-image: url(./img/image-2.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100 active"
+                        style="background-image: url(./img/image-2.svg);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -214,7 +327,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100" style="background-image: url(./img/image-2.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100"
+                        style="background-image: url(./img/image-2.svg);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -225,7 +339,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100" style="background-image: url(./img/image-2.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100"
+                        style="background-image: url(./img/image-2.svg);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -236,7 +351,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100" style="background-image: url(./img/image-2.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100"
+                        style="background-image: url(./img/image-2.svg);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -328,7 +444,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="block col-12 d-flex flex-column mb-4 pb-2">
+                            <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
                                 <img class=" w-100" src="./img/Mask Group 2.svg" alt="">
                                 <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
                                     საქართველო</span>
@@ -345,8 +461,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="block col-12 d-flex flex-column mb-4 pb-2">
-                                <img class=" w-100" src="./img/Mask Group 2.svg" alt="">
+                            <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
+                                <img class=" w-100" src="./img/new-2.svg" alt="">
                                 <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
                                     საქართველო</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
@@ -362,8 +478,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="block col-12 d-flex flex-column mb-4 pb-2">
-                                <img class=" w-100" src="./img/Mask Group 2.svg" alt="">
+                            <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
+                                <img class=" w-100" src="./img/new-3.svg" alt="">
                                 <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
                                     საქართველო</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
@@ -379,8 +495,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="block col-12 d-flex flex-column mb-4 pb-2">
-                                <img class=" w-100" src="./img/Mask Group 2.svg" alt="">
+                            <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
+                                <img class=" w-100" src="./img/new-4.svg" alt="">
                                 <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
                                     საქართველო</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
@@ -416,7 +532,15 @@
     <script>
         $(document).ready(function () {
             $('[data-toggle="popover"]').popover();
-        }); 
+        });
+        let burger = document.getElementById('burger');
+        let burgerMenu = document.getElementById('burger-menu');
+        let body = document.getElementById('body');
+        burger.addEventListener('click', function () {
+            burger.classList.toggle('active');
+            body.classList.toggle('active');
+            burgerMenu.classList.toggle('active');
+        })
     </script>
 </body>
 
