--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -98,14 +98,14 @@
             </nav>
         </div>
         <div class="down-header pt-lg-3 d-flex align-items-center justify-content-between center">
-            <div class="left__side d-none pointer">
+            <div class="left__side d-none pointer align-items-center">
                 <div class="burger-trigger d-flex justify-content-between flex-column" id="burger">
                     <div class="rows row-1"></div>
                     <div class="rows row-2"></div>
                     <div class="rows row-3"></div>
                 </div>
                 <div class="btn-group d-none second-lang">
-                    <a class="ml-3 dropdown-toggle pointer c-header" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="ml-3 dropdown-toggle pointer c-header lang-drop" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         ქარ
                     </a>
@@ -199,7 +199,7 @@
                 <a class="mr-lg-0 mr-3 live firagor f-14" class="" href="">LIVE</a>
                 <button class="button d-none d-md-block ml-lg-4 ml-3">ბილეთები</button>
                 <div class="btn-group  first-lang d-flex">
-                    <a class="ml-3 dropdown-toggle pointer c-header" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="ml-3 dropdown-toggle pointer c-header lang-drop" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         ქარ
                     </a>
@@ -389,8 +389,11 @@
                     </div>
                     <div class="block col-lg-3 col-md-6 col-12 px-2 d-flex flex-column mb-4 pb-2">
                         <img class=" w-100" src="./img/new-2.svg" alt="">
-                        <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                            საქართველო</span>
+                        <span class="c-title f-16 firagor lh-20 pt-2">ეროვნული კატეგორიის C
+                            ლიცენზიის მქონე მწვრთნელთა
+                            გადამზადების კურსების
+                            მონაწილეებს კუთვნილი
+                            ლიცენზიები გადაეცათ</span>
                         <div class="date-popover d-flex align-items-center mt-2 mb-1">
                             <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                             <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -398,14 +401,15 @@
                             <span class="f-12 c-blue firagor lh-16">U16</span>
                         </div>
                         <span class="c-text lh-20 f-14 firagor pt-2">
-                            საქართველოს ფუტსალის ეროვნულმა ნაკრებმა ევრო 2022-ის გამარჯვებით დაიწყო. ავთანდილ ასათიანის
-                            გუნდი ჯგუფის პირველ შეხვედრაში გერმანიას დაუპირისპირდა და მეტოქე...
+                            მიხეილ მესხის სახელობის სტადიონზე საქართველოს ფეხბურთის ფედერაციის პირველმა ვიცე პრეზიდენტმა, კახა ჭუმბურიძემ, თბილისის ფეხბურთის ფედერაციის პრეზიდენტთან…
                         </span>
                     </div>
                     <div class="block col-lg-3 col-md-6 col-12 px-2 d-flex flex-column mb-4 pb-2">
                         <img class=" w-100" src="./img/new-3.svg" alt="">
-                        <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                            საქართველო</span>
+                        <span class="c-title f-16 firagor lh-20 pt-2">საქართველოს 16-წლამდე
+                            ნაკრები ისრაელში
+                            საერთაშორისო ტურნირზე
+                            გაემგზავრა</span>
                         <div class="date-popover d-flex align-items-center mt-2 mb-1">
                             <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                             <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -419,8 +423,9 @@
                     </div>
                     <div class="block col-lg-3 col-md-6 col-12 px-2 d-flex flex-column mb-4 pb-2">
                         <img class=" w-100" src="./img/new-4.svg" alt="">
-                        <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                            საქართველო</span>
+                        <span class="c-title f-16 firagor lh-20 pt-2">უეფას მწვრთნელთა განათლების
+                            Pro ლიცენზიის კურსი
+                            დასრულდა</span>
                         <div class="date-popover d-flex align-items-center mt-2 mb-1">
                             <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                             <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -428,8 +433,8 @@
                             <span class="f-12 c-blue firagor lh-16">U16</span>
                         </div>
                         <span class="c-text lh-20 f-14 firagor pt-2">
-                            საქართველოს ფუტსალის ეროვნულმა ნაკრებმა ევრო 2022-ის გამარჯვებით დაიწყო. ავთანდილ ასათიანის
-                            გუნდი ჯგუფის პირველ შეხვედრაში გერმანიას დაუპირისპირდა და მეტოქე...
+                            დავით პეტრიაშვილი არენაზე უეფას მწვრთნელთა განათლების უმაღლესი საფეხურის, Pro ლიცენზიის მეთორმეტე დასკვნითი მოდული გაიმართა. მე-12 
+                            მოდულის ფარგლებში, რომელიც…
                         </span>
                     </div>
                 </div>
@@ -463,8 +468,11 @@
                         <div class="carousel-item">
                             <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
                                 <img class=" w-100" src="./img/new-2.svg" alt="">
-                                <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                                    საქართველო</span>
+                                <span class="c-title f-16 firagor lh-20 pt-2">ეროვნული კატეგორიის C
+                                    ლიცენზიის მქონე მწვრთნელთა
+                                    გადამზადების კურსების
+                                    მონაწილეებს კუთვნილი
+                                    ლიცენზიები გადაეცათ</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
                                     <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                                     <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -472,16 +480,17 @@
                                     <span class="f-12 c-blue firagor lh-16">U16</span>
                                 </div>
                                 <span class="c-text lh-20 f-14 firagor pt-2">
-                                    საქართველოს ფუტსალის ეროვნულმა ნაკრებმა ევრო 2022-ის გამარჯვებით დაიწყო. ავთანდილ
-                                    ასათიანის გუნდი ჯგუფის პირველ შეხვედრაში გერმანიას დაუპირისპირდა და მეტოქე...
+                                    მიხეილ მესხის სახელობის სტადიონზე საქართველოს ფეხბურთის ფედერაციის პირველმა ვიცე პრეზიდენტმა, კახა ჭუმბურიძემ, თბილისის ფეხბურთის ფედერაციის პრეზიდენტთან…
+
                                 </span>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
                                 <img class=" w-100" src="./img/new-3.svg" alt="">
-                                <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                                    საქართველო</span>
+                                <span class="c-title f-16 firagor lh-20 pt-2">უეფას მწვრთნელთა განათლების
+                                    Pro ლიცენზიის კურსი
+                                    დასრულდა</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
                                     <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                                     <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -489,16 +498,18 @@
                                     <span class="f-12 c-blue firagor lh-16">U16</span>
                                 </div>
                                 <span class="c-text lh-20 f-14 firagor pt-2">
-                                    საქართველოს ფუტსალის ეროვნულმა ნაკრებმა ევრო 2022-ის გამარჯვებით დაიწყო. ავთანდილ
-                                    ასათიანის გუნდი ჯგუფის პირველ შეხვედრაში გერმანიას დაუპირისპირდა და მეტოქე...
+                                    დავით პეტრიაშვილი არენაზე უეფას მწვრთნელთა განათლების უმაღლესი საფეხურის, Pro ლიცენზიის მეთორმეტე დასკვნითი მოდული გაიმართა. მე-12 
+                            მოდულის ფარგლებში, რომელიც…
                                 </span>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="block col-12 d-flex flex-column mb-4 pb-2 px-0">
                                 <img class=" w-100" src="./img/new-4.svg" alt="">
-                                <span class="c-title f-16 firagor lh-20 pt-2">ფუტსალი | გერმანია 1:3
-                                    საქართველო</span>
+                                <span class="c-title f-16 firagor lh-20 pt-2">საქართველოს 16-წლამდე
+                                    ნაკრები ისრაელში
+                                    საერთაშორისო ტურნირზე
+                                    გაემგზავრა</span>
                                 <div class="date-popover d-flex align-items-center mt-2 mb-1">
                                     <span class="f-12 c-red firagor lh-16">15 თებერვალი 2020</span>
                                     <img class="mx-2 pointer" src="./img/football.svg" alt="" data-container="body"
@@ -515,7 +526,7 @@
                 </div>
             </div>
             <div class="mx-auto mt-5">
-                <button class="button">ყველა სიახლე</button>
+                <button class="button f-16 news">ყველა სიახლე</button>
             </div>
         </div>
     </section>
