--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -525,7 +525,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mx-auto mt-5">
+            <div class="mx-auto mt-md-5 mt-3 pt-1 pt-md-0">
                 <button class="button f-16 news">ყველა სიახლე</button>
             </div>
         </div>
