--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -315,8 +315,7 @@
                     <li data-target="#carouselExampleCaptions_2" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner w-100">
-                    <div class="carousel-item position-relative linear-bc w-100 active"
-                        style="background-image: url(./img/image-22.svg);"> 
+                    <div class="carousel-item position-relative linear-bc w-100 active"> 
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -327,8 +326,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100"
-                        style="background-image: url(./img/image-22.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
@@ -339,8 +337,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100"
-                        style="background-image: url(./img/image-22.svg);">
+                    <div class="carousel-item position-relative linear-bc w-100">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
