--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -337,7 +337,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item position-relative linear-bc w-100">
+                    <div class="carousel-item position-relative linear-bc w-100"
+                        style="background-image: url(https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
