--- a/davaleba-omedia/index.html
+++ b/davaleba-omedia/index.html
@@ -315,8 +315,9 @@
                     <li data-target="#carouselExampleCaptions_2" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner w-100">
-                    <div class="carousel-item position-relative linear-bc w-100 active"> 
-                        <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
+                    <div class="carousel-item position-relative linear-bc w-100 active"
+                    style="background-image: url(./img/image-22.svg);"> 
+                        <img class="br-6 w-100 opacity" src="./img/image-22.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
                                 ხორვატია 2:1 საქართველო</span>
@@ -327,9 +328,9 @@
                         </div>
                     </div>
                     <div class="carousel-item position-relative linear-bc w-100">
-                        <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
+                        <img class="br-6 w-100 opacity" src="./img/image-22.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
-                            <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
+                            <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები | 
                                 ხორვატია 2:1 საქართველო</span>
                             <div class="mb-2">
                                 <button class="button f-14">ეროვნული ნაკრები</button>
@@ -341,22 +342,22 @@
                         style="background-image: url(https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png);">
                         <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
-                            <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
-                                ხორვატია 2:1 საქართველო</span>
+                            <span class="lh-20 c-white firagor text-center f-14">ფუტსალი | საქართველო
+                                9:2 ავსტრია</span>
                             <div class="mb-2">
-                                <button class="button">ეროვნული ნაკრები</button>
+                                <button class="button"><img class="mr-1" src="./img/football.svg" alt=""> U16</button>
 
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item position-relative linear-bc w-100"
                         style="background-image: url(./img/image-22.svg);">
-                        <img class="br-6 w-100 opacity" src="./img/image-2.svg" class="d-block w-100" alt="...">
+                        <img class="br-6 w-100 opacity" src="./img/image-22.svg" class="d-block w-100" alt="...">
                         <div class="banner__overlay">
                             <span class="lh-20 c-white firagor text-center f-14">ეროვნული ნაკრები |
                                 ხორვატია 2:1 საქართველო</span>
                             <div class="mb-2">
-                                <button class="button f-13">ეროვნული ნაკრები</button>
+                                <button class="button f-13"><img class="mr-1" src="./img/football.svg" alt=""> U16</button>
 
                             </div>
                         </div>
