--- a/mark-up/index.html
+++ b/mark-up/index.html
@@ -58,7 +58,7 @@
     </header>
     <section class="discover__section bg-light_back">
         <div class="container d-flex justify-content-between align-items-center flex-column-reverse flex-sm-row">
-            <div class="left__side col-sm-7 col-12 flex-column d-flex my-4 py-md-0 text-center text-sm-start">
+            <div class="left__side col-sm-7 col-12 flex-column d-flex my-4 my-md-0 text-center text-sm-start">
                 <span class="f-16 c-text_color regular">Welcome to Besnik Agency</span>
                 <h1 class="f-64 c-black mt-2 mb-4 bald">Discover a place
                     you'll love to live.</h1>
